# water

./: .gitignore  README.md  WORKLOG.md  findings.md  index.html  package-lock.json  package.json  playwright.config.ts  progress.md  tailwind.config.ts  task_plan.md  tsconfig.json  vite.config.ts
docs/: experiment-log.md  first-principles.md  mvp-spec.md  product-brief.md
docs/ai-collaboration/: 01-tauri-init.md  02-tray-icon.md  03-database.md  04-popover-widget.md  05-reminder.md  06-settings.md  07-polish.md
scripts/: make-icon.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sql/: schema.sql
src-tauri/src/: app_menu.rs  commands.rs  db.rs  lib.rs  main.rs  native_notify.rs  native_notify_macos.m  notification.rs  platform.rs  popover.rs  reminder.rs  reminder_overlay.rs  settings.rs  tray.rs  widget.rs
src/components/: AppIcon.tsx  ConfirmDialog.tsx  Counter.tsx  CupButton.tsx  HistoryList.tsx  NumberStepper.tsx  ProgressRing.tsx  SettingRow.tsx  Slider.tsx  TabSwitcher.tsx  TimePicker.tsx  Toggle.tsx  TrendChart.tsx  VibrancyCard.tsx
src/db/: records.ts  settings.ts  widget.ts
src/hooks/: useKeyboardNav.ts  useSettings.ts  useTodayTotal.ts  useWeeklyData.ts  useWindowDrag.ts
src/lib/: tauri.ts
src/motion/: springs.ts  variants.ts
src/types/: env.d.ts
src/windows/: PopoverRoot.tsx  ReminderOverlayRoot.tsx  SettingsRoot.tsx  WidgetRoot.tsx
submission/: C-AUTO-REPORT.md
tests/web/: auto-screenshots.spec.ts  tauri-mock.ts
