[package]
name = "hydropace"
version = "0.1.0"
description = "Hydropace - 喝水提醒 App"
authors = ["Hydropace"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hydropace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2.3"
tauri-plugin-log = "2.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"

# 03 阶段：Rust 端直接 rusqlite（不暴露前端 SQL API，错误处理更可控）
# `bundled` 把 SQLite 静态链接进 binary，不依赖系统 SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# macOS vibrancy（仅 macOS 编译）
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[features]
# 此 feature 在 `tauri dev` 和 `tauri build` 中默认启用
# 防止在生产构建中加载额外命令行参数
custom-protocol = ["tauri/custom-protocol"]
